<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/btn_goto_map"-->
<!--        style="@style/Theme.AppCompat.Light"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|right"-->
<!--        android:layout_marginRight="16dp"-->
<!--        android:layout_marginBottom="84dp"-->
<!--        android:src="@drawable/ic_baseline_map_24"-->
<!--        app:backgroundTint="@color/blue_500"-->
<!--        app:layout_anchorGravity="bottom|right|end"-->
<!--        app:rippleColor="#FFFFFF"-->
<!--        tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />-->

    <item
        android:id="@+id/btn_goto_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="Tambah" />

    <item
        android:id="@+id/btn_add_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="Tambah" />

    <item
        android:id="@+id/settings_language"
        android:title="@string/app_language"
        app:showAsAction="never"/>
    <item
        android:id="@+id/setting_app"
        android:title="Pengaturan Tema"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutme"
        android:title="@string/wafiq_about_me"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutapp"
        android:title="@string/wafiq_about_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/app_sign_out"
        app:showAsAction="never"/>

</menu>