<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bangkit_wp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailAppActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/gray_1"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_person_outline_24" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_name"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_camera"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/item_description"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

            <View
                android:paddingTop="22dp"
                android:layout_width="357dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:paddingLeft="12dp"
                android:paddingRight="55dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_description"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_description"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_description" />

            <TextView
                android:id="@+id/tv_detail_created_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="248dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingEnd="12dp"
                android:text="@string/item_created_date"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

            <View
                android:id="@+id/divider1"
                android:paddingTop="22dp"
                android:layout_width="357dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:paddingLeft="12dp"
                android:paddingRight="55dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_created_time"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_created_time"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_created_time" />

            <TextView
                android:id="@+id/avatar2"
                android:layout_width="18dp"
                android:layout_height="17dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/tv_detail_location"
                android:layout_width="350dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:fontFamily="@font/poppins_medium"
                android:text="name"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:transitionName="user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>