<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.AddItemAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/tv_add_img_app"
            android:layout_width="wrap_content"
            android:layout_height="255dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/instagram"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btn_add_galery_app"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_gallery"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_img_app" />

        <Button
            android:id="@+id/button_set_location"
            android:layout_width="360dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="set location"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_add"
            app:layout_constraintTop_toBottomOf="@+id/button_add"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="311dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_set_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_description_layout_app"
            android:layout_width="360dp"
            android:layout_height="151dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:padding="0dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_galery_app">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top"
                android:hint="@string/item_description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarAdd_app"
            style="?android:attr/horizontalScrollViewStyle"
            android:layout_width="243dp"
            android:layout_height="169dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="360dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/app_save"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ed_add_description_layout_app"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ed_add_description_layout_app"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_description_layout_app" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>