<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    app:cardBackgroundColor="@color/transparan_2"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="345dp">


        <LinearLayout
            android:id="@+id/tv_item_group_app"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            card_view:layout_constraintBottom_toTopOf="@+id/iv_app_item_photo_app"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_app"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/baseline_person_outline_24" />

            <TextView
                android:id="@+id/tv_app_item_name_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:transitionName="name"
                tools:text="@string/app_name" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_app_item_photo_app"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:contentDescription="@string/app_camera"
            android:scaleType="centerCrop"
            android:transitionName="photo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.29"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_app_item_description_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:transitionName="description"
            android:maxLines="4"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_app_item_photo_app"
            card_view:layout_constraintVertical_bias="0.222"
            tools:text="@string/item_description" />

        <View
            android:id="@+id/div_1"
            android:paddingTop="22dp"
            android:layout_width="357dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:paddingLeft="12dp"
            android:paddingRight="55dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_app_item_description_app"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_item_description_app"
            app:layout_constraintStart_toStartOf="@+id/tv_app_item_description_app"
            />


        <TextView
            android:id="@+id/tv_item_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:transitionName="description"
            android:maxLines="4"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/div_1"
            card_view:layout_constraintVertical_bias="0.222"
            tools:text="@string/item_created_date" />

        <View
            android:id="@+id/div_3"
            android:paddingTop="22dp"
            android:layout_width="357dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:paddingLeft="12dp"
            android:paddingRight="55dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_created"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_created"
            app:layout_constraintStart_toStartOf="@+id/tv_item_created" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:transitionName="Latitude"
            android:maxLines="4"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/div_3"
            card_view:layout_constraintVertical_bias="0.222"
            tools:text="Latitude" />
        <TextView
            android:id="@+id/lon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:transitionName="Longitude"
            android:maxLines="4"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/lat"
            card_view:layout_constraintVertical_bias="0.222"
            tools:text="Longitude" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>