<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signupapp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bangkit_wp"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bangkit_wp">

            <ImageView
                android:id="@+id/iv_signup_app"
                android:alpha="0"
                android:layout_width="346dp"
                android:layout_height="279dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2_app"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/sign_up" />

            <TextView
                android:id="@+id/tv_register_name_app"
                android:alpha="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_signup_app" />

            <com.example.ceritagabut.customwidgets.CustomWidgetClear
                android:id="@+id/ed_register_name"
                android:alpha="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="16dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_name_app"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_register_email_app"
                android:alpha="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

            <com.example.ceritagabut.customwidgets.CustomWidgetEmail
                android:id="@+id/ed_register_email"
                android:alpha="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="16dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_email_app"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_register_password_app"
                android:alpha="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

            <com.example.ceritagabut.customwidgets.CustomWidgetPassword
                android:id="@+id/ed_register_password"
                android:alpha="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="16dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_password_app"
                tools:ignore="TextContrastCheck" />


            <Button
                android:id="@+id/signup_button_app"
                android:alpha="0"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/blue_5"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/app_sign_up"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal_app"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.26"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal2_app"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.07"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical_app"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />


            <ProgressBar
                android:id="@+id/progressBarRegister_app"
                style="?android:attr/horizontalScrollViewStyle"
                android:layout_width="243dp"
                android:layout_height="169dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.243"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>